# startup-xpack

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README-MAINTAINER.md  README.md  meson.build  package-lock.json  package.json  xpack.json
include/micro-os-plus/startup/: defines.h  hooks.h
meta/: CMakeLists.txt  micro-os-plus-startup-config-version.cmake  micro-os-plus-startup-config.cmake  xpack-helper.cmake
sources/: CMakeLists.txt
sources/include/micro-os-plus/startup/: hooks.h
src/: _sbrk.c  exit.c  startup.cpp
tests/: CMakeLists.txt
